[package]
name = "my_portfolio_r"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.27"
egui_plot = "0.27"
eframe = { version = "0.27", features = ["glow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Add this block at the bottom of your Cargo.toml
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
